Added ahome computer to properties and corrected broken test.

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -25,6 +25,10 @@ MONO-KF.googlemap.key=ABQIAAAAZqsP68C-PfYEAobUmwen1xSei4j9m2Mi-rbOVQ0iCZaYodqdCR
 MONO-KF.vocabService.url=http://auscope-services-test.arrc.csiro.au/sissvoc/
 MONO-KF.maxFeatures.value=200
 
+# Adam Brown home PC
+adams.googlemap.key=ABQIAAAAZqsP68C-PfYEAobUmwen1xSei4j9m2Mi-rbOVQ0iCZaYodqdCRQbFXNtqGnMwriezq-u4iBCtlh5WQ
+adams.vocabService.url=http://auscope-services-test.arrc.csiro.au/sissvoc/
+adams.maxFeatures.value=200
 
 # Terry's laptop
 THUNDER-KF.vocabService.url=http://auscope-services-test.arrc.csiro.au/sissvoc/
